updated getLogFiles method to return all files in Historical_logs